<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoreStoreDetailViewModel"
            type="com.udacity.shoestore.viewmodel.ShoesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/detail_shoe_name_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/detail_shoe_name_tv"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <EditText
            android:id="@+id/detail_shoe_name_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="username"
            android:background="@color/blue_light"
            android:hint="@string/detail_enter_shoes_name_et"
            android:inputType="text"
            android:maxLength="20"
            android:minWidth="150dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@={shoreStoreDetailViewModel.shoeName}"
            app:layout_constraintBottom_toBottomOf="@id/detail_shoe_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detail_shoe_name_tv"
            app:layout_constraintTop_toTopOf="@id/detail_shoe_name_tv" />

        <TextView
            android:id="@+id/detail_shoe_company_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/detail_company_tv"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/detail_shoe_name_tv"
            app:layout_constraintTop_toBottomOf="@id/detail_shoe_name_tv" />

        <EditText
            android:id="@+id/detail_shoe_company_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:background="@color/blue_light"
            android:hint="@string/detail_enter_company_name_et"
            android:inputType="text"
            android:maxLength="20"
            android:minWidth="150dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@={shoreStoreDetailViewModel.shoeCompany}"
            app:layout_constraintBottom_toBottomOf="@id/detail_shoe_company_tv"
            app:layout_constraintEnd_toEndOf="@id/detail_shoe_name_et"
            app:layout_constraintStart_toEndOf="@id/detail_shoe_company_tv"
            app:layout_constraintTop_toTopOf="@id/detail_shoe_company_tv" />


        <TextView
            android:id="@+id/detail_shoe_size_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/detail_size_tv"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/detail_shoe_company_tv"
            app:layout_constraintTop_toBottomOf="@id/detail_shoe_company_tv" />

        <EditText
            android:id="@+id/detail_shoe_size_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:background="@color/blue_light"
            android:hint="@string/detail_enter_shoes_size_et"
            android:inputType="number"
            android:maxLength="20"
            android:minWidth="150dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@={shoreStoreDetailViewModel.shoeSize}"
            app:layout_constraintBottom_toBottomOf="@id/detail_shoe_size_tv"
            app:layout_constraintEnd_toEndOf="@id/detail_shoe_company_et"
            app:layout_constraintStart_toEndOf="@id/detail_shoe_size_tv"
            app:layout_constraintTop_toTopOf="@id/detail_shoe_size_tv" />

        <TextView
            android:id="@+id/detail_shoe_description_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/deyail_description_tv"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/detail_shoe_size_tv"
            app:layout_constraintTop_toBottomOf="@id/detail_shoe_size_tv" />


        <EditText
            android:id="@+id/detail_shoe_description_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:background="@color/blue_light"
            android:hint="@string/detail_enter_shoes_description_et"
            android:inputType="text|textMultiLine"
            android:minWidth="150dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@={shoreStoreDetailViewModel.shoeDescription}"
            app:layout_constraintBottom_toBottomOf="@id/detail_shoe_description_tv"
            app:layout_constraintEnd_toEndOf="@id/detail_shoe_size_et"
            app:layout_constraintStart_toEndOf="@id/detail_shoe_description_tv"
            app:layout_constraintTop_toTopOf="@id/detail_shoe_description_tv" />

        <Button
            android:id="@+id/detail_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/detail_cancel_btn"
            app:layout_constraintEnd_toStartOf="@id/detail_save_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_shoe_description_et" />

        <Button
            android:id="@+id/detail_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_save_btn"
            app:layout_constraintBaseline_toBaselineOf="@id/detail_cancel_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/detail_cancel_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>